2001-09-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/set.c docs/gnuplot.doc: new autoscale option:
	`set autoscale {{axis}{...|fix} | fix}` to easily set fixmin and
	fixmax in one command for one or all axes.
	* src/unset.c: wrong indentation of two "}" in unset_autoscale().

2001-09-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gplt_x11.c (GR_MAKE_PALETTE, GR_RELEASE_PALETTE,
 	GR_SET_COLOR, GR_FILLED_POLYGON): Renamed so they all have an X11_
 	prefix now, like their copies in x11.trm.
	(exec_cmd): Extend parsing of GR_FILLED_POLYGON case to allow for
 	large polygons being broken into several lines. Uses new static
 	variables `saved_npoints' and `saved_i' to keep state from one
 	partial line to the next.

	* term/x11.trm (X11_filled_polygon): Protocol for filled_polygon
 	call changed. Now uses continuation lines to break up large
 	polygons like those you get from Petr's filledcurves feature.
  	Incomplete lines have an "xxxx" at their end; continuations are
 	flagged by a -1 in the number-of-points field.
	
2001-09-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/wcommon.h src/win/wgnuplib.c: New routine
	LocalReAllocPtr().
	
	* src/win/wgraph.c: Dynamically allocate enough memory for a
	polygon with many corners (fixes 'plot with filledcurves').

2001-09-19  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* INSTALL docs/gnuplot.doc: Fix old URLs (use gnuplot.org now);
	add hyperlinks. Move pointers to frontends for gnuplot.

	* configure configure.in docs/Makefile.in: Let configure 
	check for even more utils which we use. Always check for emacs.

2001-09-18  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* src/readline.c: Fix Gnuplot-readline implementation to
	distinguish between VIO and xterm on OS/2.

	* term/post.trm: Fix broken PS code for Symbol Oblique font
	definition. Thanks to Michael Vulis from MicroPress.

	* src/getcolor.c: Drop duplicate #includes.
